--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Tahoma, serif;
+  color: #fff;
+  background: #282c34;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+#app {
+  width: 100%;
+  padding: 10px;
+}
+
+table {
+  table-layout: fixed;
+  width: 100%;
+  text-align: left;
+  background: #00000080;
+}
+
+table input {
+  width: 100%;
+  border: 1px solid #3F51B5;
+  background: #00000080;
+  padding: 3px;
+  outline: none;
+  color: #fff;
+}
+
+table input:focus {
+  border-color: aqua;
+}
+
+table input.active::placeholder {
+  color: #8BC34A;
+  font-weight: 700;
+}
+
+th.action,
+td.action {
+  width: 30px;
+  text-align: right;
+}
+
+.btn {
+  padding: 3px;
+  background: #00000080;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+}
+
+td.total-score {
+    background: #282c34;
 }
